# bidding-docs-similarity

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  download_bootstrap.py  download_model.py  main.py  pyproject.toml  requirements.txt  stopwords.txt
app/: __init__.py  config.py  lifespan.py  main.py  test_result.json
app/config/: entity_rec_config.py  entity_regex_rec_config.py  log_config.py  oss_config.py  paddle_ocr_config.py  similarity_config.py  synonyms_config.py  terms_config.py  tesseract_ocr_config.py
app/core/: __init__.py  base.py  config_manager.py  exceptions.py  task_manager.py
app/models/: __init__.py  errors.py  schemas.py
app/router/: analyze.py  config.py  entity.py  extract.py  health.py  highlight.py  ocr.py  similarity.py  upload.py
app/routers/: similarity_v2.py
app/service/: entity_rec_service.py  entity_regex_rec_service.py  oss_service.py  paddle_ocr_service.py  service_manager.py  similarity_service.py  tesseract_ocr_service.py  text_utils.py
app/services/: similarity_calculator.py  similarity_service_v2.py  text_extractor.py  text_processor.py
app/static/: highlight.html  index.html
router/: __init__.py  upload_router.py
service/: __init__.py  text_service.py
static/: index.html
