[project]
name = "bidding-docs-similarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py[cv]>=1.0.9",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "language-tool-python>=2.9.4",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "paddleocr[all]>=3.2.0",
    "paddlepaddle>=3.2.0",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
]
