[project]
name = "bidding-docs-similarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "language-tool-python>=2.9.4",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "pip>=25.2",
    "hanlp>=2.1.3",
    "minio>=7.2.20",
]

[tool.setuptools]
packages = ["app"]
